@@ -1,6 +1,7 @@
 ﻿- Add configurable XML translation framework (based on BloodyPenguin's translation framework)
 - Add Traditional Chinese translation by M.S.Referee
 - Mod now responds to in-game language changes
+- Add active detection of prefabs that failed game init
 - Settings category filter buttons now toggle on shift- or control-click
 - Performance improvement: deactivate ploppable panel when not visible
 - Performance improvement: destroy settings panel when not visible
